--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -28,7 +28,7 @@
     "import math\n",
     "\n",
     "# today's date for output filenames\n",
-    "today = dt.date.today()\n",
+    "today = (dt.date.today() - dt.date(2000, 1, 1)).days\n",
     "\n",
     "# %sql mysql://root@localhost/rental_nerd\n",
     "%sql mysql://prod:nerd@52.2.153.189/rental_nerd\n"
@@ -84,10 +84,16 @@
     "    data[\"townhouse\"] = data[\"townhouse\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data[\"mobile\"] = data[\"mobile\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data[\"fsbo\"] = data[\"fsbo\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "    \n",
     "    data['date_closed'] = data['date_closed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
+    "    data['date_closed'] = data['date_closed'].astype(int)\n",
+    "    \n",
+    "    data['date_listed'] = data['date_listed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
+    "    data['date_listed'] = data['date_listed'].astype(int)\n",
+    "    \n",
     "    data[\"fixer\"] = data[\"fixer\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data[\"foreclosure\"] = data[\"foreclosure\"].apply(lambda x: True if x == 1.0 else False)\n",
-    "    data['date_closed'] = data['date_closed'].astype(int)\n",
+    "\n",
     "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
     "    data['year_built'] = data['year_built'].apply(lambda x: 1980 if math.isnan(x) else x)\n",
     "\n",
@@ -99,7 +105,7 @@
     "    \n",
     "    return data\n",
     "\n",
-    "def query(city=\"%\", zipcode=None, limit=100, start_date=\"2000-01-01 10:01:13\", ttype='sales',tstatus='open'):\n",
+    "def query(city=\"%\", zipcode=None, limit=100, start_date=\"2000-01-01 10:01:13\", ttype='sales'):\n",
     "    # convert array of zipcodes into sql string which looks like a tuple\n",
     "    placeholders = tuple(zipcode)\n",
     "    \n",
@@ -129,7 +135,6 @@
     "    properties.`id` = property_transaction_logs.`property_id` and \\\n",
     "    property_transaction_logs.`city_code` = :city and \\\n",
     "    property_transaction_logs.`transaction_type` = :ttype and \\\n",
-    "    property_transaction_logs.`transaction_status` = :tstatus and \\\n",
     "    (properties.fixer is Null or properties.fixer = False) and \\\n",
     "    (properties.townhouse is Null or properties.townhouse = False) and \\\n",
     "    (properties.foreclosure is Null or properties.foreclosure = False) and \\\n",
@@ -144,24 +149,7 @@
     "    q = q.loc[:,~q.columns.duplicated()]\n",
     "    q.set_index('property_id', inplace=True)\n",
     "    q.index.name = 'property_id'\n",
-    "    return q\n",
-    "\n",
-    "def queue_city_queries(city, zipcode_list, for_sale_zipcode_list):\n",
-    "    i = query(city=city, zipcode=zipcode_list, limit=limit,ttype = 'sales',tstatus='closed')\n",
-    "    j = query(city=city, zipcode=for_sale_zipcode_list, limit=limit,ttype = 'sales',tstatus='open') \n",
-    "    \n",
-    "    q = pd.concat([i,j])\n",
-    "    q = sanitize(q)\n",
-    "    \n",
-    "    for_sale = q[(q.transaction_type == \"sales\") & \n",
-    "                 (q.transaction_status == \"open\") & \n",
-    "                 (q.date_listed > (today - dt.timedelta(days=365))) &\n",
-    "                 (q.is_latest == True)] \n",
-    "    sales = q[(q.transaction_type == \"sales\") & (q.transaction_status == \"closed\")]\n",
-    "        \n",
-    "    data = {'sales': sales, 'for_sale': for_sale }\n",
-    "    \n",
-    "    return data"
+    "    return q"
    ]
   },
   {
@@ -195,25 +183,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "164040 rows affected.\n",
-      "67865 rows affected.\n"
+      "509909 rows affected.\n"
      ]
     }
    ],
    "source": [
-    "q = queue_city_queries(\"PH\", phoenix_zips, focus_zipcodes)\n",
-    "\n",
-    "for k,v in q.items():\n",
-    "    v.to_csv('CSV_backups/ALL-' + k + '.csv')\n",
-    "    "
+    "q = query(city='PH', zipcode=phoenix_zips, limit=limit,ttype = 'sales')\n",
+    "q = sanitize(q)"
    ]
   },
   {
@@ -222,20 +205,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2203"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(q['for_sale'].index)"
+    "for_sale = q[(q.transaction_type == \"sales\") & \n",
+    "             (q.transaction_status == \"open\") & \n",
+    "             (q.date_listed > (today - 365)) &\n",
+    "             (q.is_latest == True)] \n",
+    "sales = q[(q.transaction_type == \"sales\")]\n",
+    "\n",
+    "for_sale.to_csv('CSV_backups/ALL-for_sale.csv')\n",
+    "sales.to_csv('CSV_backups/ALL-sales.csv')"
    ]
   },
   {
