--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,26 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
-   "execution_count": 1,
-=======
-   "execution_count": 8,
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
-   "execution_count": 8,
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -30,24 +17,12 @@
      ]
     },
     {
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
      "data": {
       "text/plain": [
        "'Connected: prod@rental_nerd'"
       ]
      },
-<<<<<<< HEAD
-<<<<<<< HEAD
-     "execution_count": 1,
-=======
-     "execution_count": 8,
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
-     "execution_count": 8,
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,8 +33,6 @@
     "# imports\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "import math\n",
     "\n",
     "# today's date for output filenames\n",
@@ -67,32 +40,11 @@
     "\n",
     "# %sql mysql://root@localhost/rental_nerd\n",
     "%sql mysql://prod:nerd@52.2.153.189/rental_nerd\n"
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-    "\n",
-    "# today's date for output filenames\n",
-    "today = dt.date.today()\n",
-    "\n",
-    "# %sql mysql://root@localhost/rental_nerd\n",
-    "%sql mysql://prod:nerd@52.2.153.189/rental_nerd"
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
-   "execution_count": 2,
-=======
-   "execution_count": 30,
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
-   "execution_count": 30,
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -121,21 +73,11 @@
     "    limit 100)\n",
     "    return query.DataFrame().city_code.values\n",
     "\n",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "def sanitize(data):\n",
-=======
-    "def sanitize(data, zipcode_list = None):\n",
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
-    "def sanitize(data, zipcode_list = None):\n",
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
     "    # abort if the city has no top zipcodes\n",
     "    if data.empty:\n",
     "        return 0    \n",
     "    \n",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "    data.drop(['abnormal', 'bookmarked', 'created_at', 'ignore', 'closed_diff_id', 'id', 'listed_diff_id',\n",
     "                      'notes', 'source', 'updated_at', 'home_type', 'sfh', 'description', \n",
     "                    'event_name', 'neighborhood'], axis=1, inplace=True)\n",
@@ -163,37 +105,6 @@
     "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
     "    data['year_built'] = data['year_built'].apply(lambda x: 1980 if math.isnan(x) else x)\n",
     "\n",
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-    "    data.drop(['abnormal', 'bookmarked', 'created_at', 'ignore', 'is_latest', 'closed_diff_id', 'id', 'listed_diff_id',\n",
-    "                      'notes', 'source', 'updated_at', 'home_type', 'sfh', 'description', \n",
-    "                    'event_name', 'neighborhood'], axis=1, inplace=True)\n",
-    "    \n",
-    "    # filters out any non-sensical values or fat finger mistakes in MLS listings\n",
-    "    print(\"Entries before filter: \", len(data))\n",
-    "\n",
-    "    if(data.transaction_type.iloc[0] == 'sales'):\n",
-    "        data = data[ data.price > 50000 ]\n",
-    "    else:\n",
-    "        data = data [ data.price > 500 ]\n",
-    "    \n",
-    "    if(zipcode_list is not None):\n",
-    "        data = data[data.zipcode.isin(zipcode_list)]\n",
-    "\n",
-    "    print(\"Entries after filter: \",len(data))\n",
-    "    \n",
-    "    # fills in some sensible defaults where data is missing\n",
-    "    data[\"near_golf_course\"] = data[\"near_golf_course\"].apply(lambda x: True if x == 1.0 else False)\n",
-    "    data[\"has_pool\"] = data[\"has_pool\"].apply(lambda x: True if x == 1.0 else False)\n",
-    "    data[\"garage\"] = data[\"garage\"].apply(lambda x: True if x == 1.0 else False)\n",
-    "    data['date_closed'] = data['date_closed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
-    "    data['date_closed'] = data['date_closed'].astype(int)\n",
-    "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
     "    \n",
     "    # convert the area name into dummy variables\n",
     "    dm = pd.get_dummies(data[['city_code', 'zipcode','school_district_id']], prefix=['city_code','zipcode','school_district_id'])\n",
@@ -202,15 +113,7 @@
     "    \n",
     "    return data\n",
     "\n",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "def query(city=\"%\", zipcode=None, limit=100, start_date=\"2000-01-01 10:01:13\", ttype='sales'):\n",
-=======
-    "def query(city=\"%\", zipcode=None, limit=100, start_date=\"2000-01-01 10:01:13\", ttype='sales',tstatus='open'):\n",
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
-    "def query(city=\"%\", zipcode=None, limit=100, start_date=\"2000-01-01 10:01:13\", ttype='sales',tstatus='open'):\n",
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
     "    # convert array of zipcodes into sql string which looks like a tuple\n",
     "    placeholders = tuple(zipcode)\n",
     "    \n",
@@ -229,8 +132,6 @@
     "    where  \\\n",
     "    ( abnormal = false OR abnormal IS NULL OR abnormal = 0 ) and \\\n",
     "    properties.sqft between 1 and 10000 and \\\n",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "    property_transaction_logs.price between 50000 and 400000 and \\\n",
     "    properties.bedrooms <= 6 and \\\n",
     "    properties.bathrooms <= 6 and \\\n",
@@ -242,25 +143,6 @@
     "    properties.`id` = property_transaction_logs.`property_id` and \\\n",
     "    property_transaction_logs.`city_code` = :city and \\\n",
     "    property_transaction_logs.`transaction_type` = :ttype and \\\n",
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-    "    property_transaction_logs.price between 500 and 400000 and \\\n",
-    "    properties.bedrooms <= 6 and \\\n",
-    "    properties.bathrooms <= 6 and \\\n",
-    "    properties.home_type = 'sfh' and \\\n",
-    "    ((properties.latitude BETWEEN 33.282668 AND 33.665268 and \\\n",
-    "    properties.longitude BETWEEN -112.274780 AND -111.810608 ) OR ( properties.zipcode IN ('85375', '85142', '85143', '85326', '85249', '85234', '85225', '85086', '85041', '85204', '85205', '85209', '85295', '85037', '85233', '85286', '85248', '85331', '85226', '85224', '85048', '85022', '85251', '85298', '85018', '85029', '85138', '85051', '85254', '85302', '85297', '85020', '85255', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85023', '85043', '85203', '85304', '85303', '85212', '85301', '85392', '85206', '85044', '85053', '85712', '85262', '85374', '85250', '85396', '85015', '85215', '85028', '85021', '85210', '85050', '85306', '85118', '85310', '85253', '85704', '85711', '85296', '85024', '85040', '85017', '85085', '85383', '85009', '85008', '85031', '85019', '85382', '85139', '85006', '85213', '85353', '85013', '85033', '85339', '85258', '85207', '85266', '85340', '85705', '85308', '85351', '85355', '85305', '85007', '85379', '85087', '85390', '85395', '85338', '85757', '85378', '85208', '85345', '85260', '85307', '85045', '85282', '85268', '85032', '85003', '85012', '85263', '85281', '85042', '85054', '85259', '85377', '85283', '85321', '85363', '85083', '85719', '85201', '85701', '85014', '85381', '85004', '85747', '85716', '85387', '85710', '85140') ) ) and \\\n",
-    "    properties.zipcode IN :placeholders and \\\n",
-    "    properties.`id` = property_transaction_logs.`property_id` and \\\n",
-    "    property_transaction_logs.`city_code` = :city and \\\n",
-    "    property_transaction_logs.`transaction_type` = :ttype and \\\n",
-    "    property_transaction_logs.`transaction_status` = :tstatus and \\\n",
-    "    property_transaction_logs.`is_latest` = true and \\\n",
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
     "    (properties.fixer is Null or properties.fixer = False) and \\\n",
     "    (properties.townhouse is Null or properties.townhouse = False) and \\\n",
     "    (properties.foreclosure is Null or properties.foreclosure = False) and \\\n",
@@ -275,12 +157,6 @@
     "    q = q.loc[:,~q.columns.duplicated()]\n",
     "    q.set_index('property_id', inplace=True)\n",
     "    q.index.name = 'property_id'\n",
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "    return q"
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
     "    return q\n",
     "\n",
     "def queue_city_queries(city, zipcode_list, for_sale_zipcode_list):\n",
@@ -299,23 +175,11 @@
     "    data = {'sales': sales, 'for_sale': for_sale }\n",
     "    \n",
     "    return data"
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
-   "execution_count": 3,
-=======
-   "execution_count": 31,
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
-   "execution_count": 31,
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -324,40 +188,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-<<<<<<< HEAD
       "200 rows affected.\n",
       "['85375', '85142', '85143', '85326', '85249', '85234', '85225', '85086', '85041', '85204', '85205', '85209', '85295', '85037', '85233', '85286', '85248', '85331', '85224', '85226', '85048', '85022', '85251', '85298', '85018', '85029', '85138', '85051', '85254', '85302', '85020', '85297', '85255', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85043', '85023', '85203', '85304', '85303', '85212', '85392', '85301', '85206', '85044', '85053', '85712', '85374', '85262']\n"
-=======
-      "1845 rows affected.\n",
-      "1845 rows affected.\n"
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
-      "1845 rows affected.\n",
-      "1845 rows affected.\n"
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
      ]
     }
    ],
    "source": [
     "# get list of top zipcodes to only run the model on them (put down 2000 to get every zipcode)\n",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "# we filter the current listings further to only see the top zipcodes to not predict prices in areas with weak coverage\n",
     "focus_zipcodes = top_zipcodes(200)\n",
     "phoenix_zips = list(filter(lambda x: x.startswith('85'), focus_zipcodes))\n",
     "print(phoenix_zips)\n",
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-    "zipcode_list = top_zipcodes(2000)\n",
-    "\n",
-    "# we filter the current listings further to only see the top zipcodes to not predict prices in areas with weak coverage\n",
-    "focus_zipcodes = top_zipcodes(2000)\n",
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
     "\n",
     "# limit on number of lines returned from sql queries (for debugging)\n",
     "limit = 2000000"
@@ -365,105 +206,27 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-<<<<<<< HEAD
-      "509805 rows affected.\n"
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-      "110329 rows affected.\n",
-      "17922 rows affected.\n",
-      "Entries before filter:  128251\n",
-      "Entries after filter:  123585\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:37: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:38: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:39: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:40: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:41: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:42: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
+      "511182 rows affected.\n"
      ]
     }
    ],
    "source": [
-<<<<<<< HEAD
-<<<<<<< HEAD
     "q = query(city='PH', zipcode=phoenix_zips, limit=limit,ttype = 'sales')\n",
     "q = sanitize(q)"
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-    "q = queue_city_queries(\"PH\", zipcode_list, focus_zipcodes)\n",
-    "\n",
-    "for k,v in q.items():\n",
-    "    v.to_csv('CSV_backups/ALL-' + k + '.csv')\n",
-    "    "
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -476,32 +239,7 @@
     "sales = q[(q.transaction_type == \"sales\")]\n",
     "\n",
     "for_sale.to_csv('CSV_backups/ALL-for_sale.csv')\n",
-    "sales.to_csv('CSV_backups/ALL-sales.csv')"
-=======
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "670 rows affected.\n",
-      "['85375', '85142', '85143', '85326', '85249', '85234', '85225', '85086', '85041', '85204', '85205', '85209', '85295', '85037', '85233', '85286', '85248', '85331', '85226', '85224', '85048', '85022', '85251', '85298', '85018', '85029', '85138', '85051', '85254', '85302', '85297', '85020', '85255', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85023', '85043', '85203', '85304', '85303', '85212', '85301', '85392', '85206', '85044', '85053', '85712', '85262', '85374', '85250', '85396', '85015', '85215', '85028', '85021', '85210', '85050', '85306', '85118', '85310', '85253', '85704', '85711', '85296', '85024', '85040', '85017', '85085', '85383', '85009', '85008', '85031', '85019', '85382', '85139', '85006', '85213', '85353', '85013', '85033', '85339', '85258', '85207', '85266', '85340', '85705', '85308', '85351', '85355', '85305', '85007', '85379', '85087', '85390', '85395', '85338', '85757', '85378', '85208', '85345', '85260', '85307', '85045', '85282', '85268', '85032', '85003', '85012', '85263', '85281', '85042', '85054', '85259', '85377', '85283', '85321', '85363', '85083', '85719', '85201', '85701', '85014', '85381', '85004', '85747', '85716', '85387', '85710', '85140']\n"
-     ]
-    }
-   ],
-   "source": [
-    "zipcode_list = top_zipcodes(670)\n",
-    "phoenix_zips = list(filter(lambda x: x.startswith('85'), zipcode_list))\n",
-    "print(phoenix_zips)"
-<<<<<<< HEAD
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
-=======
->>>>>>> 685dc74855ceed9ce85ad077a9437fa5faaaeb07
+    "sales.to_csv('CSV_backups/ALL-sales.csv')\n"
    ]
   },
   {
