--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -25,12 +25,13 @@
     "# imports\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
+    "import math\n",
     "\n",
     "# today's date for output filenames\n",
-    "today = dt.date.today()\n",
+    "today = (dt.date.today() - dt.date(2000, 1, 1)).days\n",
     "\n",
     "# %sql mysql://root@localhost/rental_nerd\n",
-    "%sql mysql://prod:nerd@52.2.153.189/rental_nerd"
+    "%sql mysql://prod:nerd@52.2.153.189/rental_nerd\n"
    ]
   },
   {
@@ -64,35 +65,38 @@
     "    limit 100)\n",
     "    return query.DataFrame().city_code.values\n",
     "\n",
-    "def sanitize(data, zipcode_list = None):\n",
+    "def sanitize(data):\n",
     "    # abort if the city has no top zipcodes\n",
     "    if data.empty:\n",
     "        return 0    \n",
     "    \n",
-    "    data.drop(['abnormal', 'bookmarked', 'created_at', 'ignore', 'is_latest', 'closed_diff_id', 'id', 'listed_diff_id',\n",
+    "    data.drop(['abnormal', 'bookmarked', 'created_at', 'ignore', 'closed_diff_id', 'id', 'listed_diff_id',\n",
     "                      'notes', 'source', 'updated_at', 'home_type', 'sfh', 'description', \n",
     "                    'event_name', 'neighborhood'], axis=1, inplace=True)\n",
-    "    \n",
-    "    # filters out any non-sensical values or fat finger mistakes in MLS listings\n",
-    "    print(\"Entries before filter: \", len(data))\n",
-    "\n",
-    "    if(data.transaction_type.iloc[0] == 'sales'):\n",
-    "        data = data[ data.price > 50000 ]\n",
-    "    else:\n",
-    "        data = data [ data.price > 500 ]\n",
-    "    \n",
-    "    if(zipcode_list is not None):\n",
-    "        data = data[data.zipcode.isin(zipcode_list)]\n",
-    "\n",
-    "    print(\"Entries after filter: \",len(data))\n",
     "    \n",
     "    # fills in some sensible defaults where data is missing\n",
     "    data[\"near_golf_course\"] = data[\"near_golf_course\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data[\"has_pool\"] = data[\"has_pool\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "    data[\"is_latest\"] = data[\"is_latest\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data[\"garage\"] = data[\"garage\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "    data[\"adult\"] = data[\"adult\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "    data[\"construction\"] = data[\"construction\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "    data[\"townhouse\"] = data[\"townhouse\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "    data[\"mobile\"] = data[\"mobile\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "    data[\"fsbo\"] = data[\"fsbo\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "    \n",
     "    data['date_closed'] = data['date_closed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
     "    data['date_closed'] = data['date_closed'].astype(int)\n",
+    "    \n",
+    "    data['date_listed'] = data['date_listed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
+    "    data['date_listed'] = data['date_listed'].astype(int)\n",
+    "    \n",
+    "    data[\"fixer\"] = data[\"fixer\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "    data[\"foreclosure\"] = data[\"foreclosure\"].apply(lambda x: True if x == 1.0 else False)\n",
+    "\n",
     "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
+    "    data['year_built'] = data['year_built'].apply(lambda x: 1980 if math.isnan(x) else x)\n",
+    "\n",
     "    \n",
     "    # convert the area name into dummy variables\n",
     "    dm = pd.get_dummies(data[['city_code', 'zipcode','school_district_id']], prefix=['city_code','zipcode','school_district_id'])\n",
@@ -101,7 +105,7 @@
     "    \n",
     "    return data\n",
     "\n",
-    "def query(city=\"%\", zipcode=None, limit=100, start_date=\"2000-01-01 10:01:13\", ttype='sales',tstatus='open'):\n",
+    "def query(city=\"%\", zipcode=None, limit=100, start_date=\"2000-01-01 10:01:13\", ttype='sales'):\n",
     "    # convert array of zipcodes into sql string which looks like a tuple\n",
     "    placeholders = tuple(zipcode)\n",
     "    \n",
@@ -120,18 +124,17 @@
     "    where  \\\n",
     "    ( abnormal = false OR abnormal IS NULL OR abnormal = 0 ) and \\\n",
     "    properties.sqft between 1 and 10000 and \\\n",
-    "    property_transaction_logs.price between 500 and 400000 and \\\n",
+    "    property_transaction_logs.price between 50000 and 400000 and \\\n",
     "    properties.bedrooms <= 6 and \\\n",
     "    properties.bathrooms <= 6 and \\\n",
     "    properties.home_type = 'sfh' and \\\n",
-    "    properties.latitude BETWEEN 33.282668 AND 33.665268 and \\\n",
-    "    properties.longitude BETWEEN -112.274780 AND -111.810608 and \\\n",
-    "    properties.zipcode IN :placeholders and \\\n",
+    "    ((properties.latitude BETWEEN 33.421516 AND 33.665268 and \\\n",
+    "    properties.longitude BETWEEN -112.274780 AND -111.810608 ) OR \\\n",
+    "    (properties.latitude BETWEEN 33.283149 AND 33.513597 and \\\n",
+    "    properties.longitude BETWEEN -111.972656 AND -111.846313 )) and \\\n",
     "    properties.`id` = property_transaction_logs.`property_id` and \\\n",
     "    property_transaction_logs.`city_code` = :city and \\\n",
     "    property_transaction_logs.`transaction_type` = :ttype and \\\n",
-    "    property_transaction_logs.`transaction_status` = :tstatus and \\\n",
-    "    property_transaction_logs.`is_latest` = true and \\\n",
     "    (properties.fixer is Null or properties.fixer = False) and \\\n",
     "    (properties.townhouse is Null or properties.townhouse = False) and \\\n",
     "    (properties.foreclosure is Null or properties.foreclosure = False) and \\\n",
@@ -177,17 +180,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1845 rows affected.\n",
-      "1845 rows affected.\n"
+      "200 rows affected.\n",
+      "['85375', '85142', '85143', '85326', '85249', '85234', '85225', '85086', '85041', '85204', '85205', '85209', '85295', '85037', '85233', '85286', '85248', '85331', '85224', '85226', '85048', '85022', '85251', '85298', '85018', '85029', '85138', '85051', '85254', '85302', '85020', '85297', '85255', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85043', '85023', '85203', '85304', '85303', '85212', '85392', '85301', '85206', '85044', '85053', '85712', '85374', '85262']\n"
      ]
     }
    ],
    "source": [
     "# get list of top zipcodes to only run the model on them (put down 2000 to get every zipcode)\n",
-    "zipcode_list = top_zipcodes(2000)\n",
-    "\n",
     "# we filter the current listings further to only see the top zipcodes to not predict prices in areas with weak coverage\n",
-    "focus_zipcodes = top_zipcodes(2000)\n",
+    "focus_zipcodes = top_zipcodes(200)\n",
+    "phoenix_zips = list(filter(lambda x: x.startswith('85'), focus_zipcodes))\n",
+    "print(phoenix_zips)\n",
     "\n",
     "# limit on number of lines returned from sql queries (for debugging)\n",
     "limit = 2000000"
@@ -197,63 +200,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51859 rows affected.\n",
-      "5456 rows affected.\n",
-      "Entries before filter:  57315\n",
-      "Entries after filter:  53503\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:37: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:38: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:39: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:40: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:41: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:42: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+      "511182 rows affected.\n"
      ]
     }
    ],
    "source": [
-    "q = queue_city_queries(\"PH\", zipcode_list, focus_zipcodes)\n",
-    "\n",
-    "for k,v in q.items():\n",
-    "    v.to_csv('CSV_backups/ALL-' + k + '.csv')\n",
-    "    "
+    "q = query(city='PH', zipcode=phoenix_zips, limit=limit,ttype = 'sales')\n",
+    "q = sanitize(q)"
    ]
   },
   {
@@ -263,11 +223,20 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for_sale = q[(q.transaction_type == \"sales\") & \n",
+    "             (q.transaction_status == \"open\") & \n",
+    "             (q.date_listed > (today - 365)) &\n",
+    "             (q.is_latest == True)] \n",
+    "sales = q[(q.transaction_type == \"sales\")]\n",
+    "\n",
+    "for_sale.to_csv('CSV_backups/ALL-for_sale.csv')\n",
+    "sales.to_csv('CSV_backups/ALL-sales.csv')\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
