resolved merge conflict

--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -69,10 +69,11 @@
     "    # abort if the city has no top zipcodes\n",
     "    if data.empty:\n",
     "        return 0    \n",
+    "    data.fillna(value=0, inplace=True)\n",
     "    \n",
     "    data.drop(['abnormal', 'bookmarked', 'created_at', 'ignore', 'closed_diff_id', 'id', 'listed_diff_id',\n",
     "                      'notes', 'source', 'updated_at', 'home_type', 'sfh', 'description', \n",
-    "                    'event_name', 'neighborhood'], axis=1, inplace=True)\n",
+    "                    'event_name', 'pended', 'neighborhood'], axis=1, inplace=True)\n",
     "    \n",
     "    # fills in some sensible defaults where data is missing\n",
     "    data[\"near_golf_course\"] = data[\"near_golf_course\"].apply(lambda x: True if x == 1.0 else False)\n",
@@ -85,10 +86,10 @@
     "    data[\"mobile\"] = data[\"mobile\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data[\"fsbo\"] = data[\"fsbo\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    \n",
-    "    data['date_closed'] = data['date_closed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
+    "    data['date_closed'] = data['date_closed'].apply(lambda x: 0 if x == 0 else (x - dt.date(2000, 1, 1)).days)\n",
     "    data['date_closed'] = data['date_closed'].astype(int)\n",
     "    \n",
-    "    data['date_listed'] = data['date_listed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
+    "    data['date_listed'] = data['date_listed'].apply(lambda x: 0 if x == 0 else (x - dt.date(2000, 1, 1)).days)\n",
     "    data['date_listed'] = data['date_listed'].astype(int)\n",
     "    \n",
     "    data[\"fixer\"] = data[\"fixer\"].apply(lambda x: True if x == 1.0 else False)\n",
@@ -97,6 +98,11 @@
     "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
     "    data['year_built'] = data['year_built'].apply(lambda x: 1980 if math.isnan(x) else x)\n",
     "\n",
+    "    data['lot'] = data['lot'].apply(lambda x: int(0 if x is None else x))\n",
+    "    data['hoa_fees'] = data['hoa_fees'].apply(lambda x: int(0 if x is None else x))\n",
+    "    data['rooms'] = data['rooms'].apply(lambda x: int(0 if x is None else x))\n",
+    "    data['saves'] = data['saves'].apply(lambda x: int(0 if x is None else x))\n",
+    "    data['stories'] = data['stories'].apply(lambda x: int(0 if x is None else x))\n",
     "    \n",
     "    # convert the area name into dummy variables\n",
     "    dm = pd.get_dummies(data[['city_code', 'zipcode','school_district_id']], prefix=['city_code','zipcode','school_district_id'])\n",
@@ -181,7 +187,7 @@
      "output_type": "stream",
      "text": [
       "200 rows affected.\n",
-      "['85375', '85142', '85143', '85326', '85249', '85234', '85225', '85086', '85041', '85204', '85205', '85209', '85295', '85037', '85233', '85286', '85248', '85331', '85224', '85226', '85048', '85022', '85251', '85298', '85018', '85029', '85138', '85051', '85254', '85302', '85020', '85297', '85255', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85043', '85023', '85203', '85304', '85303', '85212', '85392', '85301', '85206', '85044', '85053', '85712', '85374', '85262']\n"
+      "['85375', '85142', '85143', '85326', '85249', '85234', '85086', '85225', '85041', '85204', '85205', '85209', '85295', '85037', '85248', '85233', '85286', '85331', '85224', '85226', '85048', '85022', '85251', '85298', '85018', '85138', '85029', '85051', '85254', '85302', '85255', '85020', '85297', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85043', '85023', '85203', '85304', '85212', '85303', '85206', '85392', '85044', '85301', '85053', '85712', '85374', '85262']\n"
      ]
     }
    ],
@@ -193,7 +199,7 @@
     "print(phoenix_zips)\n",
     "\n",
     "# limit on number of lines returned from sql queries (for debugging)\n",
-    "limit = 2000000"
+    "limit = 200000000"
    ]
   },
   {
@@ -207,18 +213,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "511182 rows affected.\n"
+      "518514 rows affected.\n"
      ]
     }
    ],
    "source": [
-    "q = query(city='PH', zipcode=phoenix_zips, limit=limit,ttype = 'sales')\n",
-    "q = sanitize(q)"
+    "q = query(city='PH', zipcode=phoenix_zips, limit=limit,ttype = 'sales')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q = sanitize(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -236,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
