--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -22,7 +22,7 @@
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -77,10 +77,11 @@
     "    # abort if the city has no top zipcodes\n",
     "    if data.empty:\n",
     "        return 0    \n",
+    "    data.fillna(value=0, inplace=True)\n",
     "    \n",
     "    data.drop(['abnormal', 'bookmarked', 'created_at', 'ignore', 'closed_diff_id', 'id', 'listed_diff_id',\n",
     "                      'notes', 'source', 'updated_at', 'home_type', 'sfh', 'description', \n",
-    "                    'event_name', 'neighborhood'], axis=1, inplace=True)\n",
+    "                    'event_name', 'pended', 'neighborhood'], axis=1, inplace=True)\n",
     "    \n",
     "    # fills in some sensible defaults where data is missing\n",
     "    data[\"near_golf_course\"] = data[\"near_golf_course\"].apply(lambda x: True if x == 1.0 else False)\n",
@@ -93,10 +94,10 @@
     "    data[\"mobile\"] = data[\"mobile\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data[\"fsbo\"] = data[\"fsbo\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    \n",
-    "    data['date_closed'] = data['date_closed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
+    "    data['date_closed'] = data['date_closed'].apply(lambda x: 0 if x == 0 else (x - dt.date(2000, 1, 1)).days)\n",
     "    data['date_closed'] = data['date_closed'].astype(int)\n",
     "    \n",
-    "    data['date_listed'] = data['date_listed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
+    "    data['date_listed'] = data['date_listed'].apply(lambda x: 0 if x == 0 else (x - dt.date(2000, 1, 1)).days)\n",
     "    data['date_listed'] = data['date_listed'].astype(int)\n",
     "    \n",
     "    data[\"fixer\"] = data[\"fixer\"].apply(lambda x: True if x == 1.0 else False)\n",
@@ -105,6 +106,11 @@
     "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
     "    data['year_built'] = data['year_built'].apply(lambda x: 1980 if math.isnan(x) else x)\n",
     "\n",
+    "    data['lot'] = data['lot'].apply(lambda x: int(0 if x is None else x))\n",
+    "    data['hoa_fees'] = data['hoa_fees'].apply(lambda x: int(0 if x is None else x))\n",
+    "    data['rooms'] = data['rooms'].apply(lambda x: int(0 if x is None else x))\n",
+    "    data['saves'] = data['saves'].apply(lambda x: int(0 if x is None else x))\n",
+    "    data['stories'] = data['stories'].apply(lambda x: int(0 if x is None else x))\n",
     "    \n",
     "    # convert the area name into dummy variables\n",
     "    dm = pd.get_dummies(data[['city_code', 'zipcode','school_district_id']], prefix=['city_code','zipcode','school_district_id'])\n",
@@ -179,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +195,7 @@
      "output_type": "stream",
      "text": [
       "200 rows affected.\n",
-      "['85375', '85142', '85143', '85326', '85249', '85234', '85225', '85086', '85041', '85204', '85205', '85209', '85295', '85037', '85233', '85286', '85248', '85331', '85224', '85226', '85048', '85022', '85251', '85298', '85018', '85029', '85138', '85051', '85254', '85302', '85020', '85297', '85255', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85043', '85023', '85203', '85304', '85303', '85212', '85392', '85301', '85206', '85044', '85053', '85712', '85374', '85262']\n"
+      "['85375', '85142', '85143', '85326', '85249', '85234', '85225', '85086', '85041', '85204', '85205', '85209', '85295', '85037', '85233', '85286', '85248', '85331', '85224', '85226', '85048', '85022', '85251', '85298', '85018', '85029', '85138', '85051', '85254', '85302', '85020', '85255', '85297', '85323', '85016', '85335', '85388', '85373', '85202', '85027', '85706', '85035', '85257', '85043', '85023', '85203', '85304', '85303', '85212', '85392', '85301', '85206', '85044', '85053', '85712', '85374', '85262']\n"
      ]
     }
    ],
@@ -201,12 +207,12 @@
     "print(phoenix_zips)\n",
     "\n",
     "# limit on number of lines returned from sql queries (for debugging)\n",
-    "limit = 2000000"
+    "limit = 200000000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -215,12 +221,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "511182 rows affected.\n"
+      "512215 rows affected.\n"
      ]
     }
    ],
    "source": [
-    "q = query(city='PH', zipcode=phoenix_zips, limit=limit,ttype = 'sales')\n",
+    "q = query(city='PH', zipcode=phoenix_zips, limit=limit,ttype = 'sales')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "q = sanitize(q)"
    ]
   },
