predit good sell at a specific price

--- a/scraper/predict_sale_above_list.ipynb
+++ b/scraper/predict_sale_above_list.ipynb
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -834,7 +834,123 @@
       "Iteration 24, loss = 0.18324580\n",
       "Iteration 25, loss = 0.18306385\n",
       "Iteration 26, loss = 0.18283187\n",
-      "Iteration 27, loss = 0.18266883\n"
+      "Iteration 27, loss = 0.18266883\n",
+      "Iteration 28, loss = 0.18245631\n",
+      "Iteration 29, loss = 0.18224818\n",
+      "Iteration 30, loss = 0.18208810\n",
+      "Iteration 31, loss = 0.18194158\n",
+      "Iteration 32, loss = 0.18171999\n",
+      "Iteration 33, loss = 0.18158124\n",
+      "Iteration 34, loss = 0.18138601\n",
+      "Iteration 35, loss = 0.18124581\n",
+      "Iteration 36, loss = 0.18109347\n",
+      "Iteration 37, loss = 0.18097901\n",
+      "Iteration 38, loss = 0.18082789\n",
+      "Iteration 39, loss = 0.18065175\n",
+      "Iteration 40, loss = 0.18048157\n",
+      "Iteration 41, loss = 0.18044320\n",
+      "Iteration 42, loss = 0.18020931\n",
+      "Iteration 43, loss = 0.18014419\n",
+      "Iteration 44, loss = 0.18001944\n",
+      "Iteration 45, loss = 0.17989391\n",
+      "Iteration 46, loss = 0.17974542\n",
+      "Iteration 47, loss = 0.17961428\n",
+      "Iteration 48, loss = 0.17950894\n",
+      "Iteration 49, loss = 0.17936239\n",
+      "Iteration 50, loss = 0.17927368\n",
+      "Iteration 51, loss = 0.17915606\n",
+      "Iteration 52, loss = 0.17904277\n",
+      "Iteration 53, loss = 0.17891387\n",
+      "Iteration 54, loss = 0.17876567\n",
+      "Iteration 55, loss = 0.17868609\n",
+      "Iteration 56, loss = 0.17857399\n",
+      "Iteration 57, loss = 0.17842479\n",
+      "Iteration 58, loss = 0.17833105\n",
+      "Iteration 59, loss = 0.17824493\n",
+      "Iteration 60, loss = 0.17812727\n",
+      "Iteration 61, loss = 0.17805092\n",
+      "Iteration 62, loss = 0.17792789\n",
+      "Iteration 63, loss = 0.17781702\n",
+      "Iteration 64, loss = 0.17774337\n",
+      "Iteration 65, loss = 0.17764949\n",
+      "Iteration 66, loss = 0.17753749\n",
+      "Iteration 67, loss = 0.17744584\n",
+      "Iteration 68, loss = 0.17736483\n",
+      "Iteration 69, loss = 0.17729806\n",
+      "Iteration 70, loss = 0.17718324\n",
+      "Iteration 71, loss = 0.17715907\n",
+      "Iteration 72, loss = 0.17704915\n",
+      "Iteration 73, loss = 0.17695430\n",
+      "Iteration 74, loss = 0.17690604\n",
+      "Iteration 75, loss = 0.17678691\n",
+      "Iteration 76, loss = 0.17672680\n",
+      "Iteration 77, loss = 0.17663766\n",
+      "Iteration 78, loss = 0.17656348\n",
+      "Iteration 79, loss = 0.17644693\n",
+      "Iteration 80, loss = 0.17645471\n",
+      "Iteration 81, loss = 0.17635929\n",
+      "Iteration 82, loss = 0.17629876\n",
+      "Iteration 83, loss = 0.17617939\n",
+      "Iteration 84, loss = 0.17615529\n",
+      "Iteration 85, loss = 0.17605165\n",
+      "Iteration 86, loss = 0.17602897\n",
+      "Iteration 87, loss = 0.17595195\n",
+      "Iteration 88, loss = 0.17587306\n",
+      "Iteration 89, loss = 0.17584795\n",
+      "Iteration 90, loss = 0.17573833\n",
+      "Iteration 91, loss = 0.17571567\n",
+      "Iteration 92, loss = 0.17565718\n",
+      "Iteration 93, loss = 0.17561032\n",
+      "Iteration 94, loss = 0.17557287\n",
+      "Iteration 95, loss = 0.17547068\n",
+      "Iteration 96, loss = 0.17542493\n",
+      "Iteration 97, loss = 0.17538555\n",
+      "Iteration 98, loss = 0.17534802\n",
+      "Iteration 99, loss = 0.17528034\n",
+      "Iteration 100, loss = 0.17522744\n",
+      "Iteration 101, loss = 0.17516657\n",
+      "Iteration 102, loss = 0.17516834\n",
+      "Iteration 103, loss = 0.17506997\n",
+      "Iteration 104, loss = 0.17505249\n",
+      "Iteration 105, loss = 0.17499321\n",
+      "Iteration 106, loss = 0.17495951\n",
+      "Iteration 107, loss = 0.17496693\n",
+      "Iteration 108, loss = 0.17487816\n",
+      "Iteration 109, loss = 0.17482140\n",
+      "Iteration 110, loss = 0.17481491\n",
+      "Iteration 111, loss = 0.17475837\n",
+      "Iteration 112, loss = 0.17470864\n",
+      "Iteration 113, loss = 0.17469422\n",
+      "Iteration 114, loss = 0.17461621\n",
+      "Iteration 115, loss = 0.17456776\n",
+      "Iteration 116, loss = 0.17457968\n",
+      "Iteration 117, loss = 0.17449303\n",
+      "Iteration 118, loss = 0.17448370\n",
+      "Iteration 119, loss = 0.17445576\n",
+      "Iteration 120, loss = 0.17442064\n",
+      "Iteration 121, loss = 0.17441153\n",
+      "Iteration 122, loss = 0.17430558\n",
+      "Iteration 123, loss = 0.17433241\n",
+      "Iteration 124, loss = 0.17427384\n",
+      "Iteration 125, loss = 0.17430636\n",
+      "Iteration 126, loss = 0.17423675\n",
+      "Iteration 127, loss = 0.17417091\n",
+      "Iteration 128, loss = 0.17419481\n",
+      "Iteration 129, loss = 0.17413159\n",
+      "Iteration 130, loss = 0.17404729\n",
+      "Iteration 131, loss = 0.17406130\n",
+      "Iteration 132, loss = 0.17405293\n",
+      "Iteration 133, loss = 0.17407305\n",
+      "Training loss did not improve more than tol=0.000000 for two consecutive epochs. Stopping.\n",
+      "[[    3  2487]\n",
+      " [   10 40309]]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.23      0.00      0.00      2490\n",
+      "       True       0.94      1.00      0.97     40319\n",
+      "\n",
+      "avg / total       0.90      0.94      0.91     42809\n",
+      "\n"
      ]
     }
    ],
@@ -855,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -867,11 +983,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'strftime'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-61-cb59ebb23c68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m                          \u001b[0;34m,\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatitude\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                          \u001b[0;34m,\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlongitude\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m                          \u001b[0;34m,\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate_listed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%Y-%m-%d'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m                          ,for_sale.date_transacted_latest.values))\n\u001b[1;32m     12\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMultiIndex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_tuples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'property_id'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'transaction_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/ilya/anaconda3/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[1;32m   2353\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2354\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masobject\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2355\u001b[0;31m                 \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2356\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2357\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/src/inference.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer (pandas/_libs/lib.c:66645)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-61-cb59ebb23c68>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      8\u001b[0m                          \u001b[0;34m,\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatitude\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                          \u001b[0;34m,\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlongitude\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m                          \u001b[0;34m,\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate_listed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%Y-%m-%d'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m                          ,for_sale.date_transacted_latest.values))\n\u001b[1;32m     12\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMultiIndex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_tuples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'property_id'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'transaction_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'strftime'"
+     ]
+    }
+   ],
    "source": [
     "values = np.column_stack((for_sale.index.get_level_values(0)\n",
     "                         ,for_sale.index.get_level_values(1)\n",
