light rail experiment fixes

--- a/scraper/Experiments/Light Rail.ipynb
+++ b/scraper/Experiments/Light Rail.ipynb
@@ -56,13 +56,13 @@
     "\n",
     "Map of Valley Metro Stations|\n",
     ":----:|\n",
-    "![Map of light Rail](lightrailmap.png)|\n",
+    "![Map of light Rail](https://preview.ibb.co/kX2TyJ/lightrailmap.png)|\n",
     "\n",
     "We start with a basic data set consisting of transaction data consisting of `date_closed`, `price`, `sqft`, and `dist_to_lightrail_station`. Distance to the closest light rail station is measured in kilometers, as the crow flies. We also calculate the price per squarter foot as `price_per_foot`.  \n",
     "\n",
     "Example 1             |  Example 2\n",
     ":-------------------------:|:-------------------------:\n",
-    "![](dist1-resize.png) | ![](dist2-resize.png)"
+    "![](https://image.ibb.co/kjC6ky/dist1.png) | ![](https://image.ibb.co/kbP2Qy/dist2.png)\n"
    ]
   },
   {
