--- a/scraper/Experiments/Light Rail.ipynb
+++ b/scraper/Experiments/Light Rail.ipynb
@@ -194,7 +194,7 @@
     }
    ],
    "source": [
-    "# only show properties that were actually sold and closed dates are after 12/31/2004 (1460 days since Y2K)\n",
+    "# only show properties that were actually sold (and a check to exclude those with wrong close dates e.g. >10000 days)\n",
     "df = sold[(sold.date_closed != 0) & (sold.date_closed < 10000 )] \\\n",
     "        [[\"address\", \"date_closed\",\"price\",\"sqft\",\"dist_to_lightrail_station\"]]\n",
     "df.rename(columns = {'date_closed':'date'}, inplace = True)\n",
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset consists of 181,785 transactions dating back to the opening day of the light rail line. For this basic experiment, we will only study the effect of proximity to a light rail station on the total price of the house and the price per square foot."
+    "The dataset consists of 181,404 transactions dating back to the opening day of the light rail line. For this basic experiment, we will only study the effect of proximity to a light rail station on the total price of the house and the price per square foot."
    ]
   },
   {
@@ -1526,7 +1526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
