changed script to same filename

--- a/scraper/Experiments/Comparing Predictive Models.ipynb
+++ b/scraper/Experiments/Comparing Predictive Models.ipynb
@@ -295,7 +295,7 @@
     "df.drop(['year_built','date'], axis=1, inplace=True)\n",
     "df['elevation'] = (df['elevation'] - df.elevation.median()).astype(\"int64\")   \n",
     "    \n",
-    "df['ppf'] = (df.price / df.sqft)\n",
+    "df['ppsf'] = (df.price / df.sqft)\n",
     "df.head(6)"
    ]
   },
