--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -150,7 +150,7 @@
     "    where  \\\n",
     "    ( abnormal = false OR abnormal IS NULL OR abnormal = 0 ) and \\\n",
     "    properties.sqft between 500 and 4000 and \\\n",
-    "    property_transaction_logs.price between 50000 and 400000 and \\\n",
+    "    property_transaction_logs.price between 20000 and 1000000 and \\\n",
     "    properties.bedrooms <= 6 and \\\n",
     "    properties.bathrooms <= 6 and \\\n",
     "    properties.home_type = 'sfh' and \\\n",
@@ -296,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
