--- a/scraper/Detroit Map.ipynb
+++ b/scraper/Detroit Map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +110,7 @@
        "       [42.390190783275436, 42.39011227534397, 42.38970051943078, 42.38977902739197, 42.390190783275436]], dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
    "source": [
     "# map_options = GMapOptions(lat=42.39054152988467, lng=-82.99644723680774, map_type=\"roadmap\", zoom=12)\n",
     "# p = gmap(google_api_key, map_options, title=\"Detroit\")\n",
-    "p \n",
+    "p = figure()\n",
     "\n",
     "source = ColumnDataSource(\n",
     "    data=dict(lat=sold.lat.values,\n",
